--- a/src/scss/_overrides.scss
+++ b/src/scss/_overrides.scss
@@ -133,3 +133,7 @@ a {
 .input-field .suffix ~ .autocomplete-content {
   margin-right: 4rem !important;
 }
+
+.carousel ul.indicators li {
+  box-shadow: 0px 1px 3px #00000070;
+} 
