--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -46,9 +46,7 @@ p {
 
 .gsb__page-title {
   text-align: center;
-  margin-top: 0 !important;
-  margin-bottom: 25px !important;
-  display: inline-flex;
+  display: block;
   align-items: center;
   width: 100%;
   h5 {
