--- a/src/scss/_overrides.scss
+++ b/src/scss/_overrides.scss
@@ -137,3 +137,8 @@ a {
 .carousel ul.indicators li {
   box-shadow: 0px 1px 3px #00000070;
 } 
+
+.card,
+.card-content {
+  overflow: hidden!important;
+}
