--- a/src/scss/_overrides.scss
+++ b/src/scss/_overrides.scss
@@ -136,9 +136,26 @@ a {
 
 .carousel ul.indicators li {
   box-shadow: 0px 1px 3px #00000070;
-} 
+}
 
 .card,
 .card-content {
-  overflow: hidden!important;
+  overflow: hidden !important;
+}
+
+.dropdown-content {
+  background: #424242;
+}
+
+.dropdown-content li > a,
+.dropdown-content li > span {
+  color: #fff;
+}
+
+.select-dropdown li.disabled, .select-dropdown li.disabled>span, .select-dropdown li.optgroup {
+  color: rgba(#fff, 0.5)
+}
+
+.select-wrapper input.select-dropdown:focus {
+  border-bottom: 1px solid #2196f3;
 }
